# event-database

./: CMakeLists.txt  DateEvent.pro  README.md  main.cpp
core/DataBase/: database.cpp  database.h
core/Date/: date.cpp  date.h
core/ExpParser/: comparison.h  condition_parser.cpp  condition_parser.h  logical_operation.h  token.cpp  token.h
core/Nodes/: node.h
core/Nodes/DateComparisonNode/: date_comparison_node.cpp  date_comparison_node.h
core/Nodes/EmptyNode/: empty_node.cpp  empty_node.h
core/Nodes/EventComparisonNode/: event_comparison_node.cpp  event_comparison_node.h
core/Nodes/LogicalOperationNode/: logical_operation_node.cpp  logical_operation_node.h
tests/: condition_parser_test.cpp  database_test.cpp  date_test.cpp  node_test.cpp  parsers_test.cpp  tests.cpp  tests.h
tests/LogDuration/: log_duration.cpp  log_duration.h
tests/TestRunner/: test_runner.h
ui/: mainwindow.cpp  mainwindow.h  mainwindow.ui.autosave
